--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,11 @@
   <groupId>com.dev_p1</groupId>
   <artifactId>my-firts-jsf</artifactId>
   <packaging>war</packaging>
-  <version>0.0.1-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
+    <version>0.0.1-SNAPSHOT</version>
   <name>my-firts-jsf Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -14,6 +18,19 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.sun.faces/jsf-api -->
+<dependency>
+    <groupId>com.sun.faces</groupId>
+    <artifactId>jsf-impl</artifactId>
+    <version>2.2.20</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/com.sun.faces/jsf-api -->
+<dependency>
+    <groupId>com.sun.faces</groupId>
+    <artifactId>jsf-api</artifactId>
+    <version>2.2.20</version>
+</dependency>
+
   </dependencies>
   <build>
     <finalName>my-firts-jsf</finalName>
