--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,9 @@
   <artifactId>my-firts-jsf</artifactId>
   <packaging>war</packaging>
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
     <version>0.0.1-SNAPSHOT</version>
   <name>my-firts-jsf Maven Webapp</name>
@@ -30,6 +31,13 @@
     <artifactId>jsf-api</artifactId>
     <version>2.2.20</version>
 </dependency>
+      <!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
+      <dependency>
+          <groupId>javax.annotation</groupId>
+          <artifactId>javax.annotation-api</artifactId>
+          <version>1.3.2</version>
+      </dependency>
+
 
   </dependencies>
   <build>
