--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,14 @@
           <version>1.3.2</version>
       </dependency>
 
+      <dependency>
+          <groupId>org.primefaces</groupId>
+          <artifactId>primefaces</artifactId>
+          <version>8.0</version>
+      </dependency>
 
   </dependencies>
   <build>
-    <finalName>my-firts-jsf</finalName>
+    <finalName>my-firts-jsf-2</finalName>
   </build>
 </project>
